2011-07-06  Vadim Kurland  <vadim@netcitadel.com>

	* Importer.cpp (addStandardImportComment): see #2552 "PF import:
	add ability to suppress comments referring to line numbers in the
	original file".

	* PFImporter.cpp (pushPolicyRule): see #2551 "PF Import - source
	routing rules are not imported with rule options set". Importer
	should import "route-to" rule parameters.

	* PFImporter.cpp (newAddressTableObject): see #2546 "PF import -
	negation inside of inline tables is ignored". We can not import
	PF table definition that has some addresses negated.

	* PFImporterRun.cpp (run): see #2550 "PF import - recursive macros
	are not supported". Importer for PF should interpret macro
	definitions that use other macros. See #2545 "PF import error when
	using macro names with same base name and incrementing digit
	suffix". Importer should correctly interpret a macro that has name
	of another macro as a substring of its own name.

2011-07-05  vadim  <vadim@netcitadel.com>

	* PolicyCompiler_pf_writers.cpp (processNext): see #2549 "Update
	generated route-to configuration for PF versions 4.7 and later",
	SF bug 3348931. The "route-to" parameter moved to the end of
	pass rules in PF 4.7

	* pf.g: fixed bug in PF import: address lists such as "{ addr1,
	addr2, ... }" defined as macros or inside the rule could not be
	imported correctly.

	* pf.g: we should be able to import both "block quick log" and
	"block log quick".

2011-06-29  theron	<theron@netcitadel.com>
	* Fixed #2547, made keyword add/remove buttons same size.

2011-06-29  theron	<theron@netcitadel.com>
	* Fixed #2540.  On mac we can get a drop event even if
	dragMoveEvent() says the drop is invalid.  So in ObjectTreeView we
	validate the drop the same we we validate in dragMove to make sure
	the drop is valid.

	* Fixed #2542.  Catch exception inside preprocessor loop so that
	loop continues after error (for unit tests).  Also make sure to
	set ".loaded" variable before calling loadFromSource so that if an